<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/square02"
        android:text="@string/tab_title_1"
        android:textSize="10sp"
        android:id="@+id/tab_1"
        android:layout_weight="1"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/square02"
        android:text="@string/tab_title_2"
        android:id="@+id/tab_2"
        android:textSize="10sp"
        android:layout_weight="1"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/square02"
        android:text="@string/tab_title_3"
        android:id="@+id/tab_3"
        android:textSize="10sp"
        android:layout_weight="1"/>

</LinearLayout>