<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.design_phantom.iwlldotime.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layout"
        android:orientation="vertical">


        <include
            layout="@layout/tab_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:layout_weight="0"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:textSize="60dp"
                android:text="00"
                android:textColor="#ccc"
                android:id="@+id/text_count_minute"
                android:gravity="bottom"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:textSize="20sp"
                android:text="@string/minutes"
                android:textColor="#ccc"
                android:gravity="bottom"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:textSize="60sp"
                android:text="00"
                android:textColor="#ccc"
                android:id="@+id/text_count_second"
                android:gravity="bottom"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:textSize="20sp"
                android:text="@string/second"
                android:textColor="#ccc"
                android:gravity="bottom"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="2sp"
                android:text=""
                android:id="@+id/point"
                android:textColor="#fff"
                android:gravity="bottom"
                />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:layout_weight="0"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:orientation="horizontal">

                <Button
                    style="@style/myButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/bt_10second"
                    android:text="@string/bt_msg_10s"
                    />

                <Button
                    style="@style/myButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/bt_1minute"
                    android:text="@string/bt_msg_1m"
                    />

                <Button
                    style="@style/myButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/bt_10minute"
                    android:text="@string/bt_msg_10m"
                    />

                <!--<Button-->
                <!--style="@style/myButton"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:id="@+id/bt_30minute"-->
                <!--android:text="@string/bt_msg_30m"-->
                <!--/>-->


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    style="@style/myButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bt_ok_text"
                    android:layout_gravity="center"
                    android:id="@+id/bt_reg"
                    />
                <Button
                    style="@style/myButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bt_clear_text"
                    android:layout_gravity="center"
                    android:id="@+id/bt_clear"
                    />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
